tests/macros/int/mask.stderr
error: option `mask` does not exist for kind `int`
 --> $DIR/mask.rs:2:41
  |
2 |     let q = requestty::questions![Int { mask: todo!() }];
  |                                         ^^^^
