tests/macros/int/mask.rs
fn main() {
    let q = requestty::questions![Int { mask: todo!() }];
}
